<resources>
    <string name="app_name">Lendsum</string>
    <string name="cap_settings">Settings</string>
    <string name="cap_profile">Profile</string>
    <string name="cap_add">Add</string>
    <string name="cap_bundles">Bundles</string>
    <string name="cap_services">Services</string>
    <string name="cap_lending">Lending</string>
    <string name="cap_messages">Messages</string>
    <string name="cap_search">Search</string>
    <string name="cap_back">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="company_logo">company logo</string>
    <string name="send_verification_code">Send verification code</string>
    <string name="enter_verification_code">Enter verification code</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="re_enter_new_password">Re-enter new password</string>
    <string name="reset_password">Reset password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="next">Next</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="enter_code">Enter Code</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="continue_with_google">Continue with Google</string>

    <string name="re_enter_password">Re-enter Password</string>
    <string name="first_name_error_msg">First name cannot be left blank</string>
    <string name="last_name_err_msg">Last name cannot be left blank</string>
    <string name="invalid_email_err_msg">Invalid Email.</string>
    <string name="password_param_err_msg">Password must contain between 6 and 20 characters long and have at least one uppercase, one number, and one symbol</string>
    <string name="pass_dont_match_err_msg">Passwords don\'t match</string>
    <string name="enter_phone_number">Phone Number</string>
    <string name="country_code">Country Code</string>
    <string name="email_or_pass_wrong">The email or password is incorrect</string>
    <string name="not_connected_internet">Currently Offline</string>
    <string name="internet_required">Internet is required to complete this action</string>
    <string name="connected_internet">Back Online!</string>
    <string name="verification_code_sent">Verification Code Sent</string>
    <string name="phone_number_invalid">Phone number is invalid for the country code</string>
    <string name="code_not_match">The code does not match.</string>
    <string name="send_password_reset_email">Send Password Reset Email</string>
    <string name="enter_email">Enter email</string>
    <string name="reset_email_sent">Reset password email was sent</string>
    <string name="reset_email_not_sent">Reset password email failed to send</string>
    <string name="account_already_exists">An account with this email already exists. Please sign in.</string>
    <string name="no_account_with_email">There is no account associated with this email</string>
    <string name="sign_out">Sign Out</string>
    <string name="database_name">lendsum.db</string>
    <string name="karma_score">Karma Score: "</string>
    <string name="profile_name_place_holder">Profile name place holder</string>
    <string name="username">Username</string>
    <string name="email_placeholder">email placeholder</string>
    <string name="edit">edit</string>
    <string name="save">save</string>
    <string name="invalid_email_data_not_saved">Invalid email, data not saved</string>
    <string name="user_profile_updated">Profile updated!</string>
    <string name="empty_username">The username cannot be empty. Username was not saved.</string>
    <string name="empty_profile_name">The profile name cannot be empty.</string>
    <string name="no_at_symbol_err">Username must start with the @ symbol. Data not saved.</string>
    <string name="username_too_short_err">Username must be at least 3 characters. Data not saved.</string>
    <string name="profile_name_too_short_err">Profile name must be at least 3 characters. Data not saved.</string>
    <string name="sign_in_again_msg">You need to sign in again to do this.</string>
    <string name="profile_pic_img">profilePicImg</string>
    <string name="update_password">Update Password</string>
    <string name="edit_profile_icon">Edit profile icon</string>
    <string name="enter_new_profile_name">Enter new profile name</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="blank_pass_no_update">One or more password fields is blank. Password not updated.</string>
    <string name="password_has_updated">Password has been updated!</string>
    <string name="this_is_the_edit_profile_back_button">This is the edit profile back button</string>
    <string name="you_don_t_currently_have_any_conversations">You don\'t currently have any active chats</string>
    <string name="button_to_create_a_new_chat">Button to create a new chat</string>
    <string name="this_is_the_back_button_for_the_chatroom_screen">This is the back button for the chatroom screen</string>
    <string name="enter_message">Enter message</string>
    <string name="this_is_the_send_message_button">This is the send message button</string>
    <string name="user_name_placeholder">User name placeholder</string>
    <string name="this_is_the_search_icon_for_chat_room">This is the search icon for chat room</string>
    <string name="this_is_the_user_search_list">This is the user search list</string>
    <string name="user_list_item_name_holder">Placeholder name</string>
    <string name="message">Message</string>
    <string name="at_symbol_username">\@username</string>
    <string name="profile_visibility">Profile visibility:</string>
    <string name="Private">Private</string>
    <string name="Public">Public</string>
    <string name="timestamp_placeholder">Oct 20, 2020 at 7:30</string>
    <string name="last_msg_placeholder">This is the last message</string>
    <string name="short_date_placeholder">Oct 20</string>
    <string name="pick_user_first">You must pick a user first</string>
    <string name="take_image">Take Photo</string>
    <string name="gallery">Gallery</string>
    <string name="email_doesnt_exist">This email doesn\'t exist. Please try another one.</string>
    <string name="verify">Verify</string>
    <string name="exceeded_code_attempts">You have exceeded the amount of codes that can be sent. Please try again later.</string>
    <string name="code_timeout">This code has timed out. Please send new code.</string>
    <string name="friends">friends</string>
    <string name="account">account</string>
    <string name="account_settings_desc">Change your name, username, password, email</string>
    <string name="name">Name</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_login">Edit login</string>
    <string name="profile_update_err">User Profile was not updated please try again later.</string>
    <string name="offline_edit_msg">You are in offline mode. Info will be updated when internet is available.</string>

</resources>