<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    tools:context="com.lendsumapp.lendsum.ui.ForgotPasswordFragment">

    <!--Verification code xml-->
    <EditText
        android:id="@+id/forgot_email_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/forgot_send_code_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/forgot_send_code_btn"
        style="@style/LoginButtonTheme"
        android:text="@string/send_verification_code"
        app:layout_constraintBottom_toTopOf="@+id/forgot_code_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_email_et" />

    <EditText
        android:id="@+id/forgot_code_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/enter_verification_code"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/forgot_enter_code_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_send_code_btn"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/forgot_enter_code_btn"
        style="@style/LoginButtonTheme"
        android:text="@string/enter_code"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_code_et" />

    <!--End verification code xml-->

    <!--Reset password xml-->

    <EditText
        android:id="@+id/forgot_new_pass_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/enter_new_password"
        android:inputType="textEmailAddress"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintBottom_toTopOf="@+id/forgot_match_new_pass_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        android:visibility="invisible"
        tools:ignore="Autofill"/>

    <EditText
        android:id="@+id/forgot_match_new_pass_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/re_enter_new_password"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/forgot_reset_pass_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_new_pass_et"
        android:visibility="invisible"
        tools:ignore="Autofill"/>

    <Button
        android:id="@+id/forgot_reset_pass_btn"
        style="@style/LoginButtonTheme"
        android:text="@string/reset_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgot_match_new_pass_et"
        android:visibility="invisible"/>

    <!--End Reset Password xml-->

</androidx.constraintlayout.widget.ConstraintLayout>