<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondaryLight"
    tools:context="com.lendsumapp.lendsum.ui.CreateAccountFragment">

    <EditText
        android:id="@+id/create_user_first_name_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/first_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/create_user_last_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/create_user_last_name_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/last_name"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/create_user_email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_first_name_et"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/create_user_email_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/create_user_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_last_name_et"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/create_user_password_et"
        style="@style/LoginEditTextTheme"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/create_account_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_email_et"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/create_account_back_btn"
        style="@style/LoginButtonTheme"
        android:text="@string/cap_back"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/create_account_next_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_password_et" />

    <Button
        android:id="@+id/create_account_next_btn"
        style="@style/LoginButtonTheme"
        android:layout_width="0dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@+id/create_account_back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create_account_back_btn"
        app:layout_constraintTop_toTopOf="@+id/create_account_back_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>