<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/opacity80Black"
    tools:context=".ui.EditProfileFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_50_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_30_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3333" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_66_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".6666" />

    <ImageView
        android:id="@+id/edit_profile_pic"
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_margin="32dp"
        android:contentDescription="@string/profile_pic_img"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_30_guide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/edit_profile_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@null"
        android:contentDescription="@string/this_is_the_edit_profile_back_button"
        android:src="@drawable/ic_arrow_back_32"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_profile_icon"
        android:src="@drawable/ic_edit_32"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_pic"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_pic"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_pic"
        app:layout_constraintVertical_bias="1" />

    <TextView
        android:id="@+id/edit_profile_name_tv"
        style="@style/SecondaryText"
        android:text="@string/profile_name_place_holder"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_name_et"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_name_et"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_name_et"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_name_et" />

    <EditText
        android:id="@+id/edit_profile_name_et"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/enter_new_profile_name"
        android:inputType="text"
        android:textColor="@color/colorSecondaryLight"
        android:textColorHint="@color/colorSecondaryDark"
        android:textCursorDrawable="@drawable/color_cursor"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_username_et"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_name_toggle"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_30_guide"
        tools:ignore="Autofill" />

    <ToggleButton
        android:id="@+id/edit_profile_name_toggle"
        style="@style/ButtonTheme"
        android:textOff="@string/edit"
        android:textOn="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_name_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_name_et"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_name_et" />

    <TextView
        android:id="@+id/edit_profile_username_tv"
        style="@style/SecondaryText"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_username_et"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_username_et"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_username_et"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_username_et" />

    <EditText
        android:id="@+id/edit_profile_username_et"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/enter_new_username"
        android:inputType="text"
        android:textColor="@color/colorSecondaryLight"
        android:textColorHint="@color/colorSecondaryDark"
        android:textCursorDrawable="@drawable/color_cursor"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_email_et"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_username_toggle"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_name_et"
        tools:ignore="Autofill" />

    <ToggleButton
        android:id="@+id/edit_profile_username_toggle"
        style="@style/ButtonTheme"
        android:textOff="@string/edit"
        android:textOn="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_username_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_username_et"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_username_et" />


    <TextView
        android:id="@+id/edit_profile_email_tv"
        style="@style/SecondaryText"
        android:text="@string/email_placeholder"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_email_et"
        app:layout_constraintEnd_toEndOf="@+id/edit_profile_email_et"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/edit_profile_email_et"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_email_et" />

    <EditText
        android:id="@+id/edit_profile_email_et"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/enter_new_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSecondaryLight"
        android:textColorHint="@color/colorSecondaryDark"
        android:textCursorDrawable="@drawable/color_cursor"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/horizontal_66_guide"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_email_toggle"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_username_et"
        tools:ignore="Autofill" />

    <ToggleButton
        android:id="@+id/edit_profile_email_toggle"
        style="@style/ButtonTheme"
        android:textOff="@string/edit"
        android:textOn="@string/save"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_email_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_profile_email_et"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_email_et" />

    <EditText
        android:id="@+id/edit_profile_password_et"
        style="@style/EditTextTheme"
        android:layout_width="226dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/enter_new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorSecondaryLight"
        android:textColorHint="@color/colorSecondaryDark"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_match_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontal_66_guide"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/edit_profile_match_password_et"
        style="@style/EditTextTheme"
        android:layout_width="226dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/re_enter_new_password"
        android:inputType="textPassword"
        android:textColor="@color/colorSecondaryLight"
        android:textColorHint="@color/colorSecondaryDark"
        android:textCursorDrawable="@drawable/color_cursor"
        app:layout_constraintBottom_toTopOf="@+id/edit_profile_visibility_tv"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_update_pass_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_password_et"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/edit_profile_update_pass_btn"
        style="@style/ButtonTheme"
        android:text="@string/update_password"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_match_password_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/vertical_50_guide"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_match_password_et" />

    <TextView
        android:id="@+id/edit_profile_visibility_tv"
        style="@style/PrimaryText"
        android:text="@string/profile_visibility"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_profile_update_pass_btn"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile_match_password_et" />

    <ToggleButton
        android:id="@+id/edit_profile_visibility_toggle"
        style="@style/ButtonTheme"
        app:layout_constraintBottom_toBottomOf="@+id/edit_profile_visibility_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:textOn="@string/Private"
        android:textOff="@string/Public"
        app:layout_constraintStart_toStartOf="@+id/vertical_50_guide"
        app:layout_constraintTop_toTopOf="@+id/edit_profile_visibility_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>